<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/txt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/title_login"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_username_hint" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_password_hint"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/roleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbAdmin"
            android:text="@string/title_admin" />

        <RadioButton
            android:id="@+id/rbEmployee"
            android:text="@string/title_employee" />
    </RadioGroup>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login" />
</LinearLayout>
