<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_create_task"
        android:textColor="#E91E63"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_task_tile" />

    <EditText
        android:id="@+id/edtTasktile"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_assign_to" />

    <ListView
        android:id="@+id/lvAccount"
        android:layout_width="match_parent"
        android:layout_height="217dp" />

    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:text="@string/title_create_task"
        android:textColorLink="#FF9800"
        android:textSize="20sp" />
</LinearLayout>
